--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,23 @@
 }
 
 html, body {
-    height: 100%;
+    height:     100%;
     background: linear-gradient(-90deg, pink, purple);
 }
 
+.wrapper {
+    margin: 0 auto;
+}
+.container {
+    width:     100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear:  both;
+}
 .title{
-    text-align:  center;
+    text-align:   center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    line-height: 50px;
+    line-height:  50px;
     width: 100%;
     height: 50%;
     background-color: #000000;
@@ -27,6 +36,7 @@ html, body {
     color: #ffffff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 24px;
+    position: relative;
 }
 
 #wins {
