--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,14 @@ html, body {
 .title{
     text-align:   center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    line-height:  50px;
+    line-height:  95px;
+    font-size: 50px;
     width: 100%;
     height: 50%;
     background-color: #000000;
     color: #ffffff;
     margin: 0px 5px 10px 5px;
+    padding: 10px 5px 10px 5px;
 }
 
 #gameBox {
@@ -67,3 +69,30 @@ img {
     border-width: 5px;
 
 }
+
+.ball {
+    clear:both;
+    display: inline-block;
+    width: 50%;
+    height: 90%;
+    margin: 0;
+    border-radius: 50%;
+    position: relative;
+    background: radial-gradient(circle at 50% 120%, #81e8f6, #76deef 10%, #055194 80%, #062745 100%);
+  }
+  .ball:before {
+    content: "";
+    position: absolute;
+    top: 1%;
+    left: 5%;
+    width: 50%;
+    height: 70%;
+    border-radius: 50%;
+    background: radial-gradient(circle at 50% 0px, #ffffff, rgba(255, 255, 255, 0) 58%);
+    filter: blur(5px);
+    z-index: 2;
+  }
+  p {
+      position: absolute;
+      float: left;
+  }
