--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poor+Story');
+@import url('https://www.1001fonts.com/neon-font.html');
 
 * {
     box-sizing: border-box;
@@ -26,9 +27,19 @@ html, body {
     width: 100%;
     height: 50%;
     background-color: #000000;
-    color: #39ff14;
     margin: 0px 5px 10px 5px;
     padding: 10px 5px 10px 5px;
+
+    font-family: 'Futura';
+    color: #fff;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
+
+    color: #fff;
+	text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff2d95, 0 0 30px #ff2d95, 0 0 40px #ff2d95, 0 0 50px #ff2d95, 0 0 75px #ff2d95;
+	letter-spacing: 5px;
+	font: 40px 'MisoRegular';
+
+    
 }
 
 #gameBox {
@@ -39,7 +50,7 @@ html, body {
     
     color: #ffffff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     position: relative;
 }
 
@@ -69,26 +80,28 @@ img {
     border-style: groove;
     border-color: green;
     border-width: 5px;
+    max-width: 100%;
+    height: auto;
 
 }
 
-.ball {
+.crystalball {
     display:inline-block;
     clear:both;
     
-    width: 70%;
-    height: 100%;
+    width: 85%;
+    height: 90%;
     margin: 0;
     border-radius: 50%;
     position: relative;
     background: radial-gradient(circle at 50% 120%, #81e8f6, #76deef 10%, #055194 80%, #062745 100%);
   }
 
-  /*digregard*/
-  .ball:before {
+  /*digregard
+  .crystalball:before {
     content: "";
     position: relative;
-    top: 1%;
+    top: 10%;
     left: 5%;
     width: 50%;
     height: 70%;
@@ -96,8 +109,10 @@ img {
     background: radial-gradient(circle at 50% 0px, #ffffff, rgba(255, 255, 255, 0) 58%);
     filter: blur(5px);
     z-index: 2;
-  }
+  }*/
   p {
-      position: absolute;
+      position: relative;
       float: left;
+      padding: 5px 20px 5px 20px;
+      font-size: 18px;
   }
