--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
 html, body {
     height:     100%;
     background-image: url(../images/misty.jpg);
-    background-size: 100%
+    background-size: 100%;
+    
     /*background: linear-gradient(-90deg, rgb(224, 172, 181), rgb(177, 70, 177));*/
 }
 
@@ -50,29 +51,29 @@ html, body {
     padding: 10px 0px 10px 10px;
     
     color: #ffffff;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 20px;
+    font-family: monospace;
+    font-size: 16px;
     position: relative;
 }
 
 #wins {
     text-align:center;
-    padding: 35px 0px 30px 0px;
+    padding: 65px 0px 15px 0px;
 }
 
 #losses {
     text-align:center;
-    padding: 35px 0px 30px 0px;
+    padding: 35px 0px 15px 0px;
 }
 
 #guesses {
     text-align:center;
-    padding: 35px 0px 30px 0px;
+    padding: 35px 0px 20px 0px;
 }
 
 #guessLeft {
     text-align:center;
-    padding: 35px 0px 30px 0px;
+    padding: 35px 0px 15px 0px;
 }
 img {
     float: right;
